@@ -2,6 +2,8 @@ package com.openkm.util;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.openkm.core.Config;
 import com.openkm.dao.bean.Role;
 import com.openkm.dao.bean.User;
@@ -22,14 +24,13 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.AuthenticationServiceException;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.json.JSONArray;
-import org.json.JSONObject;
 import org.springframework.stereotype.Component;
 
 import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.rmi.RemoteException;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -85,26 +86,28 @@ public class KeycloakUtils {
 		}
 	}
 	private String getAccessToken(String username, String password) throws IOException {
-
+		
 		String urlParameters = "grant_type=password"
-			+ "&client_id=" + URLEncoder.encode(clientId, "UTF-8")
-			+ "&username=" + URLEncoder.encode(username, "UTF-8")
-			+ "&password=" + URLEncoder.encode(password, "UTF-8")
-			+ "&client_secret=" + URLEncoder.encode(clientSecret, "UTF-8");
+			+ "&client_id=" + URLEncoder.encode(clientId, StandardCharsets.UTF_8)
+			+ "&username=" + URLEncoder.encode(username, StandardCharsets.UTF_8)
+			+ "&password=" + URLEncoder.encode(password, StandardCharsets.UTF_8)
+			+ "&client_secret=" + URLEncoder.encode(clientSecret, StandardCharsets.UTF_8);
 
-		URL url = new URL(tokenEndpoint);
+		URL url = URI.create(tokenEndpoint).toURL();
 		HttpURLConnection conn = (HttpURLConnection) url.openConnection();
 		conn.setDoOutput(true);
 		conn.setRequestMethod("POST");
 		conn.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
 
 		try (OutputStream os = conn.getOutputStream()) {
-			os.write(urlParameters.getBytes("UTF-8"));
+			os.write(urlParameters.getBytes(StandardCharsets.UTF_8));
 		}
 
-		InputStream is = conn.getInputStream();
-		String json = new BufferedReader(new InputStreamReader(is))
-			.lines().collect(Collectors.joining("\n"));
+		String json;
+		try (InputStream is = conn.getInputStream();
+			 BufferedReader reader = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8))) {
+			json = reader.lines().collect(Collectors.joining("\n"));
+		}
 
 		ObjectMapper mapper = new ObjectMapper();
 		JsonNode root = mapper.readTree(json);
@@ -117,10 +120,10 @@ public class KeycloakUtils {
 
 			// Decode the token and extract roles
 			String[] parts = this.getAccessToken(username,password).split("\\.");
-			String payload = new String(Base64.getDecoder().decode(parts[1]), "UTF-8");
+			String payload = new String(Base64.getDecoder().decode(parts[1]), StandardCharsets.UTF_8);
 			ObjectMapper mapper = new ObjectMapper();
 			JsonNode tokenJson = mapper.readTree(payload);
-			JsonNode rolesNode = tokenJson.path("resource_access").path("some-api").path("roles");
+			JsonNode rolesNode = tokenJson.path("resource_access").path(this.clientId).path("roles");
 
 			if (rolesNode.isArray()) {
 				for (JsonNode role : rolesNode) {
@@ -149,12 +152,13 @@ public class KeycloakUtils {
 		post.setHeader("Authorization", "Bearer " + token);
 		post.setHeader("Content-Type", "application/json");
 
-		JSONObject user = new JSONObject();
+		ObjectMapper mapper = new ObjectMapper();
+		ObjectNode user = mapper.createObjectNode();
 		setJSON(userDetails, user);
-		user.put("emailVerified",true);
+		user.put("emailVerified", true);
 		user.put("enabled", true);
 
-		post.setEntity(new StringEntity(user.toString()));
+		post.setEntity(new StringEntity(mapper.writeValueAsString(user), StandardCharsets.UTF_8));
 		try (CloseableHttpClient client = HttpClients.createDefault();
 			 CloseableHttpResponse response = client.execute(post)) {
 			if (response.getStatusLine().getStatusCode() == 201) {
@@ -181,12 +185,13 @@ public class KeycloakUtils {
 		HttpPut put = new HttpPut(kcBase + "/admin/realms/" + realmId + "/users/" + userInternalId);
 		put.setHeader("Authorization", "Bearer " + token);
 		put.setHeader("Content-Type", "application/json");
-		JSONObject newData = new JSONObject();
+		ObjectMapper mapper = new ObjectMapper();
+		ObjectNode newData = mapper.createObjectNode();
 		newData.put("email", email);
-		put.setEntity(new StringEntity(newData.toString()));
+		put.setEntity(new StringEntity(mapper.writeValueAsString(newData), StandardCharsets.UTF_8));
 
-		try(CloseableHttpClient client = HttpClients.createDefault();
-			CloseableHttpResponse response = client.execute(put)){
+		try (CloseableHttpClient client = HttpClients.createDefault();
+			 CloseableHttpResponse response = client.execute(put)) {
 			if(response.getStatusLine().getStatusCode() != 204){
 				throw new RuntimeException("Failed to update user email: " + response.getStatusLine());
 			}
@@ -207,10 +212,11 @@ public class KeycloakUtils {
 		put.setHeader("Authorization", "Bearer " + token);
 		put.setHeader("Content-Type", "application/json");
 
-		JSONObject user = new JSONObject();
+		ObjectMapper mapper = new ObjectMapper();
+		ObjectNode user = mapper.createObjectNode();
 		setJSON(userDetails, user);
 
-		put.setEntity(new StringEntity(user.toString()));
+		put.setEntity(new StringEntity(mapper.writeValueAsString(user), StandardCharsets.UTF_8));
 		try (CloseableHttpClient client = HttpClients.createDefault();
 			 CloseableHttpResponse response = client.execute(put)) {
 			if (response.getStatusLine().getStatusCode() == 204) {
@@ -224,7 +230,7 @@ public class KeycloakUtils {
 
 	}
 
-	private void setJSON(User userDetails, JSONObject user) {
+	private void setJSON(User userDetails, ObjectNode user) {
 		String[] fullName = userDetails.getName().split(" ");
 
 		if(fullName.length > 0) {
@@ -232,11 +238,11 @@ public class KeycloakUtils {
 			if(fullName.length > 1) {
 				user.put("lastName", fullName[fullName.length - 1]);
 			}else {
-				user.put("lastName","");
+				user.put("lastName", "");
 			}
 		}
 		else {
-			user.put("firstName","");
+			user.put("firstName", "");
 		}
 		user.put("username", userDetails.getId());
 		user.put("email", userDetails.getEmail());
@@ -247,12 +253,13 @@ public class KeycloakUtils {
 		put.setHeader("Authorization", "Bearer " + token);
 		put.setHeader("Content-Type", "application/json");
 
-		JSONObject pwd = new JSONObject();
+		ObjectMapper mapper = new ObjectMapper();
+		ObjectNode pwd = mapper.createObjectNode();
 		pwd.put("type", "password");
 		pwd.put("temporary", false);
 		pwd.put("value", password);
 
-		put.setEntity(new StringEntity(pwd.toString()));
+		put.setEntity(new StringEntity(mapper.writeValueAsString(pwd), StandardCharsets.UTF_8));
 
 		try (CloseableHttpClient client = HttpClients.createDefault();
 			 CloseableHttpResponse response = client.execute(put)) {
@@ -274,7 +281,7 @@ public class KeycloakUtils {
 		if(roleName.isEmpty())
 			roleName = Config.DEFAULT_USER_ROLE;
 		String clientInternalId = getClientUUID(token,this.clientId);
-		JSONObject keycloakRole = getClientRole(token,clientInternalId,roleName);
+		JsonNode keycloakRole = getClientRole(token,clientInternalId,roleName);
 		assignClientRoleToUser(token,userId,clientInternalId,keycloakRole);
 
 	}
@@ -284,36 +291,38 @@ public class KeycloakUtils {
 
 		try (CloseableHttpClient client = HttpClients.createDefault();
 			 CloseableHttpResponse response = client.execute(get)) {
-			JSONArray clients = new JSONArray(EntityUtils.toString(response.getEntity()));
-			for (int i = 0; i < clients.length(); i++) {
-				JSONObject c = clients.getJSONObject(i);
-				if (clientName.equals(c.getString("clientId"))) {
-					return c.getString("id");
+			ObjectMapper mapper = new ObjectMapper();
+			JsonNode clients = mapper.readTree(EntityUtils.toString(response.getEntity()));
+			for (JsonNode c : clients) {
+				if (clientName.equals(c.path("clientId").asText())) {
+					return c.path("id").asText();
 				}
 			}
 			throw new RuntimeException("Client not found: " + clientName);
 		}
 	}
 
-	private JSONObject getClientRole(String token, String clientUUID, String roleName) throws IOException {
+	private JsonNode getClientRole(String token, String clientUUID, String roleName) throws IOException {
 		HttpGet get = new HttpGet(kcBase + "/admin/realms/" + realmId + "/clients/" + clientUUID + "/roles/" + roleName);
 		get.setHeader("Authorization", "Bearer " + token);
 
 		try (CloseableHttpClient client = HttpClients.createDefault();
 			 CloseableHttpResponse response = client.execute(get)) {
-			return new JSONObject(EntityUtils.toString(response.getEntity()));
+			ObjectMapper mapper = new ObjectMapper();
+			return mapper.readTree(EntityUtils.toString(response.getEntity()));
 		}
 	}
 
-	private void assignClientRoleToUser(String token, String userId, String clientUUID, JSONObject role) throws IOException {
+	private void assignClientRoleToUser(String token, String userId, String clientUUID, JsonNode role) throws IOException {
 		HttpPost post = new HttpPost(kcBase + "/admin/realms/" + realmId + "/users/" + userId + "/role-mappings/clients/" + clientUUID);
 		post.setHeader("Authorization", "Bearer " + token);
 		post.setHeader("Content-Type", "application/json");
 
-		JSONArray roles = new JSONArray();
-		roles.put(role);
+		ObjectMapper mapper = new ObjectMapper();
+		ArrayNode roles = mapper.createArrayNode();
+		roles.add(role);
 
-		post.setEntity(new StringEntity(roles.toString()));
+		post.setEntity(new StringEntity(mapper.writeValueAsString(roles), StandardCharsets.UTF_8));
 
 		try (CloseableHttpClient client = HttpClients.createDefault();
 			 CloseableHttpResponse response = client.execute(post)) {
@@ -351,9 +360,10 @@ public class KeycloakUtils {
 		try (CloseableHttpClient client = HttpClients.createDefault();
 			 CloseableHttpResponse response = client.execute(get)) {
 
-			JSONArray users = new JSONArray(EntityUtils.toString(response.getEntity()));
-			if (users.length() > 0) {
-				return users.getJSONObject(0).getString("id");
+			ObjectMapper mapper = new ObjectMapper();
+			JsonNode users = mapper.readTree(EntityUtils.toString(response.getEntity()));
+			if (users.size() > 0) {
+				return users.path(0).path("id").asText();
 			} else {
 				throw new RuntimeException("User not found: " + username);
 			}
@@ -364,7 +374,8 @@ public class KeycloakUtils {
 		HttpGet get = new HttpGet(kcBase + "/admin/realms/" + realmId + "/users/" + userId + "/role-mappings/clients/" + clientUUID);
 		get.setHeader("Authorization", "Bearer " + token);
 
-		JSONArray assignedRoles;
+		ObjectMapper mapper = new ObjectMapper();
+		JsonNode assignedRoles;
 		try (CloseableHttpClient client = HttpClients.createDefault();
 			 CloseableHttpResponse response = client.execute(get)) {
 
@@ -372,17 +383,17 @@ public class KeycloakUtils {
 			if (status != 200) {
 				throw new RuntimeException("Failed to get assigned client roles: " + status);
 			}
-			assignedRoles = new JSONArray(EntityUtils.toString(response.getEntity()));
+			assignedRoles = mapper.readTree(EntityUtils.toString(response.getEntity()));
 		}
 
-		if (assignedRoles.isEmpty()) {
+		if (assignedRoles.size() == 0) {
 			return;
 		}
 
 		HttpDeleteWithBody delete = new HttpDeleteWithBody(kcBase + "/admin/realms/" + realmId + "/users/" + userId + "/role-mappings/clients/" + clientUUID);
 		delete.setHeader("Authorization", "Bearer " + token);
 		delete.setHeader("Content-Type", "application/json");
-		delete.setEntity(new StringEntity(assignedRoles.toString()));
+		delete.setEntity(new StringEntity(mapper.writeValueAsString(assignedRoles), StandardCharsets.UTF_8));
 
 		try (CloseableHttpClient client = HttpClients.createDefault();
 			 CloseableHttpResponse response = client.execute(delete)) {
